--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<h3> Click to enter my small business website </h3>
 	<br>
-		<a href='index.html'>
+		<a href='website.html'>
 			<button> Enter </button></a>
 	<hr> 
 
