--- a/index.html
+++ b/index.html
@@ -17,18 +17,26 @@
 
 	<h3> Click to enter my small business website </h3>
 	<br>
-		<a href='website.html'>
-		<button> Enter </button></a>
+		<a href='index.html'>
+			<button> Enter </button></a>
 	<hr> 
-
-</body>
-	<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css&quot; rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</html>
-
+	<h3> Click to enter my first Map </h3>
+	<br>
+		<a href='API_Map.html'>
+			<button> Enter </button></a>
+	<hr> 
+	<h3> Click to enter my Map Marker </h3>
+	<br>
+		<a href='API_MapMarker.html'>
+			<button> Enter </button></a>
+	<hr> 
+	<h3> Click to enter my text-to-speech </h3>
+	<br>
+		<a href='speech1.html'>
+			<button> Enter </button></a>
+	<hr> 
+<h3> Click to see my clock </h3>
+	<br>
+		<a href='clock.html'>
+			<button> Enter </button></a>
+	<hr> 
